--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,7 @@
             "styles": [
               "src/apps/data-tagging/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
           },
           "configurations": {
             "production": {
@@ -66,7 +66,8 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "data-tagging:build:production"
+              "browserTarget": "data-tagging:build:production",
+              "proxyConfig": "src/apps/data-tagging/proxy.conf.js"
             },
             "development": {
               "browserTarget": "data-tagging:build:development"
